--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
             <h5 class="titulo">Só de Cenoura</h5>
 
             <div>
+                <i class="material-icons waves-effect waves-light waves-circle scan-qrcode">camera</i>
                 <i class="material-icons waves-effect waves-light
                           waves-circle dropdown-button"
                     data-activates="submenu" data-gutter="5"
@@ -112,5 +113,6 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="cordova.js"></script>
 </body>
 </html>
