--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,8 @@
             <h5 class="titulo">Só de Cenoura</h5>
 
             <div>
-                <i class="material-icons waves-effect waves-light waves-circle scan-qrcode">camera</i>
+                <i class="material-icons waves-effect waves-light waves-circle scan-qrcode">camera</i> 
+
                 <i class="material-icons waves-effect waves-light
                           waves-circle dropdown-button"
                     data-activates="submenu" data-gutter="5"
@@ -35,6 +36,7 @@
                    class="white-text waves-effect waves-light">
                     Bolos
                 </a>
+
             </li>
             <li class="tab">
                 <a href="#bebidas"
@@ -45,45 +47,278 @@
         </ul>
     </div>
 
+
+    
+
+
     <div id="bolos" class="section">
-        <h6 class="container brown-text">Fatia</h6>
-        <div class="collection">
-            <a class="collection-item waves-effect black-text">Só de Cenoura</a>
-            <a class="collection-item waves-effect black-text">Com Nutella</a>
-            <a class="collection-item waves-effect black-text">De Brigadeiro</a>
-            <a class="collection-item waves-effect black-text">Açucarado</a>
+      <div class="row">
+    <div class="col s12">
+      <div class="card hoverable">
+        <div class="card-image">
+          <img src="img/splash.png">
+          <span class="card-title">Aŕea de bolos</span>
         </div>
-
-        <h6 class="container brown-text">Inteiro</h6>
-        <div class="collection">
-            <a class="collection-item waves-effect black-text">Só de Cenoura inteiro</a>
-            <a class="collection-item waves-effect black-text">Com Nutella inteiro</a>
-            <a class="collection-item waves-effect black-text">De Brigadeiro inteiro</a>
-            <a class="collection-item waves-effect black-text">Açucarado inteiro</a>
+        <div class="card-content">
+          <p>Desfrute das variadas opções de bolos.</p>
         </div>
+      </div>
     </div>
+  </div>
 
+  <!-- PEDAÇO -->
+  <ul class="collapsible popout" data-collapsible="accordion">
+    <li>
+      <div class="collapsible-header hoverable orange lighten-2 waves-effect">
+          <i class="material-icons">brightness_2</i>
+        Pedaço
+        <span class="badge">4</span>
+      </div>
+      <div class="collapsible-body orange lighten-4">
+        <ul class="collection">
+          <li class="collection-item avatar">
+            <img src="img/bolo-cenoura.jpg" alt="" class="circle">
+            <span class="title">Só de Cenoura</span>
+            <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+            <br>
+            <b> Preço: </b> R$ 12.00 <br>
+            <b> Marca: </b> Da casa <br>
+          </li>
+          <li class="collection-item avatar">
+            <img src="img/bolo-nutella.jpg" class="circle">
+            <span class="title">Com Nutella</span>
+            <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+            <br>
+            <b> Preço: </b> R$ 10.00 <br>
+            <b> Marca: </b> Da casa <br>
+          </li>
+          <li class="collection-item avatar">
+            <img src="img/bolo-brigadeiro.jpg" class="circle">
+            <span class="title">Brigadeiro</span>
+            <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+            <br>
+            <b> Preço: </b> R$ 20.00 <br>
+            <b> Marca: </b> Da casa <br>
+          </li>
+          <li class="collection-item avatar">
+            <img src="img/bolo-acucarado.jpg" class="circle">
+            <span class="title">Açucarado</span>
+            <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+            <br>
+            <b> Preço: </b> R$ 20.00 <br>
+            <b> Marca: </b> Da casa <br>
+          </li>
+        </ul>
+      </div>
+    </li>
+
+    <!-- INTEIRO -->
+    <ul class="collapsible popout" data-collapsible="accordion">
+      <li>
+        <div class="collapsible-header hoverable orange lighten-2 waves-effect">
+            <i class="material-icons">brightness_1</i>
+          Inteiro
+          <span class="badge">4</span>
+        </div>
+        <div class="collapsible-body orange lighten-4">
+          <ul class="collection ">
+            <li class="collection-item avatar">
+              <img src="img/bolo-cenoura.jpg" alt="" class="circle">
+              <span class="title">Só de Cenoura Inteiro</span>
+              <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+              <br>
+              <b> Preço: </b> R$ 12.00 <br>
+              <b> Marca: </b> Da casa <br>
+            </li>
+            <li class="collection-item avatar">
+              <img src="img/bolo-nutella.jpg" class="circle">
+              <span class="title">Com Nutella Inteiro</span>
+              <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+              <br>
+              <b> Preço: </b> R$ 10.00 <br>
+              <b> Marca: </b> Da casa <br>
+            </li>
+            <li class="collection-item avatar">
+              <img src="img/bolo-brigadeiro.jpg" class="circle">
+              <span class="title">Brigadeiro Inteiro</span>
+              <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+              <br>
+              <b> Preço: </b> R$ 20.00 <br>
+              <b> Marca: </b> Da casa <br>
+            </li>
+            <li class="collection-item avatar">
+              <img src="img/bolo-acucarado.jpg" class="circle">
+              <span class="title">Açucarado Inteiro</span>
+              <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+              <br>
+              <b> Preço: </b> R$ 20.00 <br>
+              <b> Marca: </b> Da casa <br>
+            </li>
+          </ul>
+        </div>
+      </li>
+</div>
     <div id="bebidas" class="section">
-        <h6 class="container brown-text">Cafés</h6>
-        <div class="collection">
-            <a class="collection-item waves-effect black-text">Espresso</a>
-            <a class="collection-item waves-effect black-text">Capuccino</a>
-            <a class="collection-item waves-effect black-text">Mocachino</a>
+      <div class="row">
+    <div class="col s12 m6">
+      <div class="card hoverable">
+        <div class="card-image">
+          <img src="img/splash.png">
+          <span class="card-title">Aŕea de bebidas</span>
         </div>
+        <div class="card-content">
+          <p>Desfrute das variadas opções de bebidas para acompanhar sua refeição.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
-        <h6 class="container brown-text">Refrigerantes</h6>
-        <div class="collection">
-            <a class="collection-item waves-effect black-text">Soda</a>
-            <a class="collection-item waves-effect black-text">Guaraná</a>
-            <a class="collection-item waves-effect black-text">Coca</a>
-        </div>
+      <!-- CHÁS -->
+      <ul class="collapsible popout" data-collapsible="accordion">
+        <li>
+          <div class="collapsible-header hoverable orange lighten-2 waves-effect">
+              <i class="material-icons">local_cafe</i>
+            Chás
+            <span class="badge">3</span>
+          </div>
+          <div class="collapsible-body orange lighten-4">
+            <ul class="collection ">
+              <li class="collection-item avatar">
+                <img src="img/cha-hortela.jpg" alt="" class="circle">
+                <span class="title">Hortelã</span>
+                <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+                <br>
+                <b> Preço: </b> R$ 12.00 <br>
+                <b> Marca: </b> Da casa <br>
+              </li>
+              <li class="collection-item avatar">
+                <img src="img/cha-mate.jpg" class="circle">
+                <span class="title">Mate</span>
+                <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+                <br>
+                <b> Preço: </b> R$ 10.00 <br>
+                <b> Marca: </b> Da casa <br>
+              </li>
+              <li class="collection-item avatar">
+                <img src="img/cha-preto.jpg" class="circle">
+                <span class="title">Preto</span>
+                <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+                <br>
+                <b> Preço: </b> R$ 20.00 <br>
+                <b> Marca: </b> Da casa <br>
+              </li>
+            </ul>
+          </div>
+        </li>
 
-        <h6 class="container brown-text">Sucos</h6>
-        <div class="collection">
-            <a class="collection-item waves-effect black-text">Melancia</a>
-            <a class="collection-item waves-effect black-text">Tangerina</a>
-            <a class="collection-item waves-effect black-text">Limão</a>
-        </div>
+        <!-- CAFÉS -->
+        <li>
+          <div class="collapsible-header hoverable orange lighten-2 waves-effect">
+            <i class="material-icons">local_cafe</i>Cafés
+            <span class="badge">3</span>
+          </div>
+          <div class="collapsible-body orange lighten-4">
+            <ul class="collection">
+              <li class="collection-item avatar">
+                <img src="img/cafe-espresso.jpg" alt="" class="circle">
+                <span class="title">Espresso</span>
+                <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+                <br>
+                <b> Preço: </b> R$ 12.00<br>
+                <b> Marca: </b> Da casa <br>
+              </li>
+              <li class="collection-item avatar">
+                <img src="img/cafe-capuccino.jpg" class="circle">
+                <span class="title">Capuccino</span>
+                <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+                <br>
+                <b> Preço: </b> R$ 10.00 <br>
+                <b> Marca: </b> Da casa <br>
+                </li>
+              <li class="collection-item avatar">
+                <img src="img/cafe-mocaccino.jpg" class="circle">
+                <span class="title">Mocaccino</span>
+                <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+                <br>
+                <b> Preço: </b> R$ 20.00 <br>
+                <b> Marca: </b> Da casa <br>
+                </li>
+            </ul>
+          </div>
+        </li>
+
+        <!-- REFRIGERANTES -->
+        <li>
+          <div class="collapsible-header hoverable orange lighten-2 waves-effect">
+            <i class="material-icons">local_drink</i>Refrigerantes
+            <span class="badge">3</span>
+          </div>
+          <div class="collapsible-body orange lighten-4">
+            <ul class="collection">
+              <li class="collection-item avatar">
+                <img src="img/refrigerante-coca.jpg" alt="" class="circle">
+                <span class="title">Coca</span>
+                <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+                <br>
+                <b> Preço: </b> R$ 12.00<br>
+                <b> Marcas: </b> Coca-cola, Ice-cola.<br>
+                </li>
+              <li class="collection-item avatar">
+                <img src="img/refrigerante-guarana.jpg" class="circle">
+                <span class="title">Guaraná</span>
+                <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+                <br>
+                <b> Preço: </b> R$ 10.00 <br>
+                <b> Marcas: </b> Fanta, Antártica. <br>
+              </li>
+              <li class="collection-item avatar">
+                <img src="img/refrigerante-uva.jpg" class="circle">
+                <span class="title">Uva</span>
+                <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+                <br>
+                <b> Preço: </b> R$ 20.00 <br>
+                <b> Marca: </b> Fanta. <br>
+                </li>
+            </ul>
+          </div>
+        </li>
+
+        <!-- SUCOS -->
+        <li>
+          <div class="collapsible-header hoverable orange lighten-2 waves-effect">
+            <i class="material-icons">local_drink</i>Sucos
+            <span class="badge">3</span>
+          </div>
+          <div class="collapsible-body orange lighten-4">
+            <ul class="collection">
+              <li class="collection-item avatar">
+                <img src="img/refrigerante-coca.jpg" alt="" class="circle">
+                <span class="title">Melancia</span>
+                <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+                <br>
+                <b> Preço: </b> R$ 12.00<br>
+                <b> Marca: </b> Da casa <br>
+                </li>
+              <li class="collection-item avatar">
+                <img src="img/refrigerante-guarana.jpg" class="circle">
+                <span class="title">Tangerina</span>
+                <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+                <br>
+                <b> Preço: </b> R$ 10.00 <br>
+                <b> Marca: </b> Da casa <br>
+              </li>
+              <li class="collection-item avatar">
+                <img src="img/refrigerante-uva.jpg" class="circle">
+                <span class="title">Limão</span>
+                <a href="#!" class="secondary-content"><i class="material-icons small botao-add">add_shopping_cart</i></a>
+                <br>
+                <b> Preço: </b> R$ 20.00 <br>
+                <b> Marca: </b> Da casa <br>
+                </li>
+            </ul>
+          </div>
+        </li>
+      </ul>
     </div>
 
     <div class="fixed-action-btn">
@@ -93,14 +328,33 @@
         </a>
     </div>
 
+    <div class="fixed-action-btn botao-pedidos">
+        <a class="btn-floating btn-large waves-effect waves-light brown modal-trigger pulse"
+           href="#pedidos">
+            <i class="material-icons">content_paste</i>
+        </a>
+    </div>
+
+    <div id="pedidos" class="modal modal-fixed-footer">
+      <div class="modal-content">
+      <iframe src="http://cozinhapp.sergiolopes.org/" height="100%" width="100%"></iframe>
+      </div>
+      <div class="modal-footer">
+        <button class="btn-flat waves-effect waves-red modal-close acao-limpar">
+                OK
+        </button>
+      </div>
+    </div>
+    </div>
+
     <div id="confirmacao" class="modal modal-fixed-footer">
         <div class="modal-content">
-            <h5>Resumo do pedido</h5>
+            <h5 class="center-align">Resumo do pedido</h5>
             <input id="numero-mesa" type="number" class="validate" placeholder="Número da mesa">
             <blockquote id="resumo"></blockquote>
         </div>
         <div class="modal-footer">
-            <button class="btn deep-orange waves-effect waves-light modal-close">
+            <button class="btn deep-orange waves-effect waves-light modal-close acao-finalizar">
                 Pedir
             </button>
             <button class="btn-flat waves-effect waves-red modal-close acao-limpar">
@@ -109,10 +363,9 @@
         </div>
     </div>
 
-
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
-    <script src="js/app.js"></script>
     <script src="cordova.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
